# artpark-robotics-challenge

./: Dockerfile  README.md  run_cerberus.sh  test_joints.sh
arm_controller/: CMakeLists.txt  package.xml
arm_controller/scripts/: main.py
arm_controller/src/: base_controller.cpp  base_controller.cpp.save
cerberus_gazebo/: README.md
cerberus_gazebo/config/: config.yaml  config_test.yaml  controller.yaml
cerberus_gazebo/launch/: build_map.launch  combined_launch.launch  joint_controller.launch  setup.launch  spawn_robot.launch  turtlebot3.launch  washroom_world.launch
cerberus_gazebo/worlds/: washroom.world  washroom_spray.world
cerberus_navigation/: CMakeLists.txt  DWA_planner_params.yaml  base_local_planner_params.yaml  cerberus_navigation.rviz  common_costmap_params.yaml  local_costmap_params.yaml  move_base.launch  navigation.launch  package.xml
cerberus_robot/: CMakeLists.txt  package.xml
cerberus_robot/config/: config.yaml
cerberus_robot/launch/: spawn_robot_urdf.launch  turtlebot3_navigation.launch
cerberus_robot/models/basin/: model.config  model.sdf
cerberus_robot/models/basin/meshes/: basin.dae
cerberus_robot/models/commode/: commode.sdf  model.config
cerberus_robot/models/kinect_ros/: model.sdf
cerberus_robot/models/rover/: model_working.sdf  model_working_mini.sdf
cerberus_robot/models/scribble/: model.config
cerberus_robot/models/scribble/materials/scripts/: scribble.material
cerberus_robot/src/: random_spawn_plugin.cpp
cerberus_robot/worlds/: washroom_spray.world
entry_detector/: CMakeLists.txt  package.xml
entry_detector/src/: main.cpp
pal_vision_segmentation/: CMakeLists.txt
pal_vision_segmentation/src/: image_processing.cpp
particle_shooter/: CMakeLists.txt  package.xml
particle_shooter/launch/: main.launch  main_heavy.launch
trash_can_detector/: CMakeLists.txt  package.xml
trash_waypoints/: CMakeLists.txt  package.xml
(+21 files in other folders)
